<resources>
    <string name="app_name">Train Buddy</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="birth_date">Birth Date</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="send_password_reset_link">Send Password Reset Link</string>
    <string name="start_training_more_options">Start training</string>
    <string name="stop_training">Stop training</string>
    <string name="save_profile">Save</string>
    <string name="title_profile">Edit profile</string>
    <string name="ic_profile">Profile</string>


    <string name="retrieving_state">Checking Status...</string>
    <string name="not_available">Resource not available yet</string>
    <string name="training_not_available">Training is still not available to you</string>
    <string name="progress">Progress:</string>
    <string name="total">Total:</string>
    <string name="exercises_not_available">No Exercises available</string>
    <string name="trainings">Trainings</string>
    <string name="sensor_capturing">Sensor capturing</string>
    <string name="button_start">Start</string>
    <string name="button_share">Share</string>
    <string name="button_stop">Stop</string>
    <string name="share_subject">Sensors data</string>
    <string name="training_done">Treino completo</string>
    <string name="date">Date:</string>
    <string name="state">State</string>
    <string name="login_register">Login/Register</string>
    <string name="rollback">Rollback</string>
</resources>
